# SmolChat-Android

./: .gitignore  README.md  RELEASE_NOTES.md  keystore.jks
app/: build.gradle.kts
app/src/main/java/io/shubham0204/smollmandroid/data/: AppDB.kt  ChatsDB.kt
app/src/main/java/io/shubham0204/smollmandroid/ui/screens/chat/: ChatActivity.kt  ChatScreenViewModel.kt  EditChatSettingsScreen.kt
app/src/main/java/io/shubham0204/smollmandroid/ui/screens/model_download/: DownloadModelsViewModel.kt
qnn_shims/: AEEStdDef.h  AEEStdErr.h  HAP_compute_res.h  HAP_etm_config.h  HAP_farf.h  HAP_mem.h  HAP_perf.h  HAP_power.h  HAP_ps.h  domain.h  dspqueue.h  hexagon_types.h  hexagon_udma.h  rpcmem.h
smollm/src/main/cpp/: CMakeLists.txt  LLMInference.cpp
smollm/src/main/java/io/shubham0204/smollm/: SmolLM.kt
